--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "connect-history-api-fallback": "^2.0.0",
     "electron-updater": "^6.1.7",
     "lucide-react": "^0.468.0",
+    "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
